This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-07-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/PatternLayout.cpp: use std::string::size_type instead of int.
	
2002-07-10 David Resnick <dresnick@mobilespear.com>
	* src/PatternLayout.cpp, include/log4cpp/PatternLayout.hh, 
	tests/testPattern.cpp, msvc6/testPattern/testPattern.dsp: added support 
	for formatting date and testing that new support.
	
	* tests/testDLL.cpp, msvc6/testDLL/testDLL.dsp: added project that
	tests log4cpp DLL (on win32 platform), including export of container
	object.
	
	* msvc6/log4cpp/log4cpp.dsp, msvc6/log4cppDLL/log4cppDLL.dsp: fixed so
	that PropertyConfigurator and attendant files are compiled in MSVC6.

2002-07-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/StringUtil.hh, src/StringUtil.cpp: added a more generic split()
	method taking an output_iterator instead of a vector to store the 
	result.

	* src/PropertyConfiguratorImpl.hh, src/PropertyConfiguratorImpl.cpp:
	renamed addAppenders() to configureCategory(). 
	fixed configureCategory(): had a nested loop for priorities and 
	appenders.
	replaced find(property, '.') with StringUtil::split() in several
	places.

	* src/PropertyConfiguratorImpl.cpp: fixed configureCategory() fix.
	
2002-07-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/StringUtil.hh, src/StringUtil.cpp: added split() method.

	* src/PropertyConfiguratorImpl.hh, src/PropertyConfiguratorImpl.hh:
	changed the way configuration is done: first instantatiate all
	Appenders defined in the config, then add them to Categories where
	necessary. Multiple Appenders per Category are now supported. 
	Currently doConfigure() leaks all Appenders, as they will be not be
	owned by any Categories. This will be fixed in the future by having
	the LoggerRepository maintain ownership of all Categories, Appenders,
	etc.

2002-07-04 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>